--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.12.0"
+    "@nuxtjs/tailwindcss": "^6.12.0",
+    "typescript": "^5.4.5",
+    "vue-tsc": "^1"
   }
 }
