--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxtjs/strapi": "^1.12.0",
     "flowbite": "^2.3.0",
+    "markdown-it": "^14.1.0",
     "nuxt": "^3.11.2",
     "qs": "^6.12.1",
     "vue": "^3.4.27",
