--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   },
   "dependencies": {
     "@nuxtjs/strapi": "^1.12.0",
-    "flowbite": "^2.3.0",
     "markdown-it": "^14.1.0",
     "nuxt": "^3.11.2",
+    "nuxt-icons": "^3.2.1",
     "qs": "^6.12.1",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.12.0",
+    "sass": "^1.77.5",
     "typescript": "^5.4.5",
     "vue-tsc": "^1"
   }
