--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@inotom/vue-go-top": "^2.0.0",
+    "@nuxtjs/sitemap": "^7.4.3",
     "@nuxtjs/strapi": "^1.12.0",
     "markdown-it": "^14.1.0",
     "nuxt": "^3.11.2",
